--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
   body {
     padding: 0;
     margin: 0;
-    min-width: 700px;
+    min-width: 500px;
     width: 100%;
     height: 100%;
+    background-color: #f1f1f1;
   }
 </style>
