--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <div class="loader-line-wrap">
           <div class="loader-line"></div>
         </div>
+        <div class="txt">正在加载,请稍后...</div>
       </div>
     </div>
   </div>
@@ -48,9 +49,19 @@
     background-color: #f1f1f1;
   }
 
+  .txt {
+    font-size: 18px;
+    color: #222;
+    margin: 10px 0;
+    text-align: center;
+    position: absolute;
+    top: 100px;
+    left: 0;
+  }
+
   .loader {
-    background: #000;
-    background: radial-gradient(#222, #000);
+    background: #fff;
+    background: radial-gradient(#fff, #e9e9e9);
     bottom: 0;
     left: 0;
     overflow: hidden;
@@ -68,10 +79,11 @@
     position: absolute;
     right: 0;
     top: 0;
-    width: 100px;
+    width: 170px;
   }
 
   .loader-line-wrap {
+    margin: 0 20px;
     animation:
       spin 2000ms cubic-bezier(.175, .885, .32, 1.275) infinite;
     box-sizing: border-box;
