--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" href="/logo.png" />
+  <link rel="icon" href="/atom.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>无代码平台</title>
 </head>
 <script type="module" src="/src/main.ts"></script>
 <script src="/config.js"></script>
-
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/qweather-icons@1.3.1/font/qweather-icons.css">
 <body>
   <div id="app">
     <div class="loader">
