feat:add menu tab fun

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   }
 
   .loader {
-    background-image: linear-gradient(to top, #ebc0fd 0%, #d9ded8 100%);
+    background-image: linear-gradient(to top, #ebc0fd 0%, #f1e2f8 100%);
     bottom: 0;
     left: 0;
     overflow: hidden;
