--- a/index.html
+++ b/index.html
@@ -51,12 +51,11 @@
   }
 
   .txt {
-    font-size: 18px;
-    color: #fff;
-    margin: 10px 0;
+    font-size: 17px;
+    color: #555;
     text-align: center;
     position: absolute;
-    top: 100px;
+    top: 120px;
     letter-spacing: 1px;
     left: 0;
   }
