--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" href="/logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>无代码平台</title>
+  <title>模板平台</title>
 </head>
 <script type="module" src="/src/main.ts"></script>
 <script src="/config.js"></script>
